Fix document title back and shortcut color contrast. (#51442)
* Fix wayfinder back and shortcut color contrast.

* gray-800

--- a/packages/edit-site/src/components/header-edit-mode/document-actions/style.scss
+++ b/packages/edit-site/src/components/header-edit-mode/document-actions/style.scss
@@ -58,13 +58,17 @@
 	}
 }
 
-.edit-site-document-actions__shortcut {
-	color: $gray-700;
-	text-align: right;
+.edit-site-document-actions__shortcut,
+.edit-site-document-actions__back {
+	color: $gray-800;
 
-	&:hover {
-		color: $gray-700;
+	.edit-site-document-actions:hover & {
+		color: $gray-900;
 	}
+}
+
+.edit-site-document-actions__shortcut {
+	text-align: right;
 }
 
 .edit-site-document-actions__back {
